<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/grey_trans_85">

    <LinearLayout
        android:id="@+id/mainFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingHorizontal="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLokasiUser"
                style="@style/caption.regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strLokasiUser"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLokasi"
                style="@style/body.bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLokasiUser"
                tools:text="Semua"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnLocation"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardElevation="0dp"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/white">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_maps" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingHorizontal="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUpdate"
                style="@style/caption.regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strDate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDate"
                style="@style/body.bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvUpdate"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="13-08-2022" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/mainPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/big.bold"
                    android:text="@string/strBahan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:layout_marginTop="24dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvClassification"
                    android:layoutAnimation="@anim/layout_rv_animation_slide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingHorizontal="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    tools:listitem="@layout/item_classification"
                    tools:itemCount="10"/>

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/big.bold"
                    android:text="@string/strHargaLokasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:layout_marginTop="24dp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cvNoData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:paddingTop="16dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivNoData"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/no_data"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/caption.regular"
                        android:text="@string/strNoData"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginHorizontal="32dp"
                        app:layout_constraintTop_toBottomOf="@+id/ivNoData" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvData"
                    android:layoutAnimation="@anim/layout_rv_animation_slide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingHorizontal="8dp"
                    tools:listitem="@layout/item_data"
                    tools:itemCount="4"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:shimmer_duration="3000"
        android:background="@color/white"
        android:visibility="gone">
        <include layout="@layout/shimmer_main"/>
    </com.facebook.shimmer.ShimmerFrameLayout>

</LinearLayout>