<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/grey_trans_85">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingHorizontal="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvShimmerLokasiUser"
            style="@style/caption.regular"
            android:background="@drawable/view_8"
            android:textColor="@color/grey_300"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strLokasiUser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvShimmerLokasi"
            style="@style/body.bold"
            android:background="@drawable/view_8"
            android:textColor="@color/grey_300"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvShimmerLokasiUser"
            tools:text="Semua"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/btnShimmerLocation"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardElevation="0dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/grey_200">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@color/grey_200" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingHorizontal="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvShimmerUpdate"
            style="@style/caption.regular"
            android:background="@drawable/view_8"
            android:textColor="@color/grey_300"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strDate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvShimmerDate"
            style="@style/body.bold"
            android:background="@drawable/view_8"
            android:textColor="@color/grey_300"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvShimmerUpdate"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="13-08-2022" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/mainShimmerPage"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/big.bold"
                    android:background="@drawable/view_8"
                    android:textColor="@color/grey_300"
                    android:text="@string/strBahan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/view_8"/>

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/big.bold"
                    android:background="@drawable/view_8"
                    android:textColor="@color/grey_300"
                    android:text="@string/strHargaLokasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:layout_marginVertical="4dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/view_8"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:layout_marginVertical="4dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/view_8"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:layout_marginVertical="4dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/view_8"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:layout_marginVertical="4dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/view_8"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:layout_marginVertical="4dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/view_8"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:layout_marginVertical="4dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/view_8"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:layout_marginVertical="4dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/view_8"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:layout_marginVertical="4dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/view_8"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:layout_marginVertical="4dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/view_8"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>